--- a/public/style.css
+++ b/public/style.css
@@ -22,3 +22,41 @@ fieldset {
   color: #800;
   font-style: oblique;
 }
+
+ul {
+  list-style: none;
+  display: inline-block;
+  text-align: left;
+  width: 50%;
+}
+
+li {
+  display: block;
+  padding: 0.5em 0;
+  clear: both;
+}
+
+li~li {
+  border-top: 1px solid #ddd;
+}
+
+li p {
+  padding: 0;
+  margin: 0;
+}
+
+li .link {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+li .author {
+  font-style: italic;
+}
+
+li img.thumb {
+  float: left;
+  height: 4.5em;
+  margin-right: 0.5em;
+}
+
