--- a/views/links.tt
+++ b/views/links.tt
@@ -3,7 +3,7 @@
     [% foreach link in links %]
       <li>
         [% if link.title.match('^image/') %]
-          <img class="thumb" src="[% link.uri %]" alt="thumbnail">
+          <a href="[% link.uri %]"><img class="thumb" src="[% link.uri %]" alt="thumbnail"></a>
         [% end %]
         <p class="link"><a href="[% link.uri %]">[% link.title %]</a></p>
         <p class="author"><a href="/by/[% link.user | uri %]">[% link.user %]</a></p>
