--- a/views/links.tt
+++ b/views/links.tt
@@ -2,8 +2,8 @@
   <ul>
     [% foreach link in links %]
       <li>
-        [% if link.title.match('^image/') %]
-          <a href="[% link.uri %]"><img class="thumb" src="[% link.uri %]" alt="thumbnail"></a>
+        [% if link.thumb %]
+          <a href="[% link.uri %]"><img class="thumb" src="[% link.thumb %]" alt="thumbnail"></a>
         [% end %]
         <p class="link"><a href="[% link.uri %]">[% link.title %]</a></p>
         <p class="author"><a href="/by/[% link.user | uri %]">[% link.user %]</a></p>
