--- a/public/style.css
+++ b/public/style.css
@@ -6,23 +6,6 @@ fieldset {
   border: none;
 }
 
-#url {
-  width: 20em;
-}
-
-#result {
-  margin: 0;
-}
-
-#waiting {
-  display: none;
-}
-
-.error {
-  color: #800;
-  font-style: oblique;
-}
-
 ul {
   list-style: none;
   display: inline-block;
@@ -61,3 +44,16 @@ li img.thumb {
   margin: 0 0.5em 0.5em 0;
 }
 
+.navbar {
+  width: 100%;
+}
+
+.navbar-content {
+  display: inline-block;
+  text-align: center;
+}
+
+#waiting {
+  display: none;
+  margin: 0.45em 0 0 -2em;
+}
