--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -19,12 +19,16 @@
       $(document).ready(function() {
         $('form').submit(function() {
           $('#waiting').show();
+          $('.error').hide();
+
           var uri = $('#url').val();
+
           $.post('/', { uri: uri }, function(data) {
             if (data.error) {
-              alert(data.error);
               $('#url').val('');
               $('#waiting').hide();
+              $('.error').show();
+              $('.error').text(data.error);
             } else {
               location.reload();
             }
@@ -48,6 +52,8 @@
         </div>
       </div>
     </div>
+
+    <p class="error"></p>
 
     [% content %]
   </body>
