--- a/views/links.tt
+++ b/views/links.tt
@@ -8,7 +8,7 @@
           <a href="[% link.uri %]"><img class="thumb" src="[% link.thumb %]" alt="thumbnail"></a>
         [% end %]
         <p class="link"><a href="[% link.uri %]">[% link.title %]</a></p>
-        <p class="author"><a href="/by/[% link.user | uri %]">[% link.user %]</a></p>
+        <p class="author">[% link.user %]</p>
         <p class="date">[% date.format(link.created, '%Y-%m-%d %H:%M:%S') %]</p>
       </li>
     [% end %]
