--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -10,33 +10,10 @@
 
     <link rel="stylesheet" href="/bootstrap.min.css">
     <link rel="stylesheet" href="/style.css">
-
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/rss">
 
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $('form').submit(function() {
-          $('#waiting').show();
-          $('.error').hide();
-
-          var uri = $('#url').val();
-
-          $.post('/', { uri: uri }, function(data) {
-            if (data.error) {
-              $('#url').val('');
-              $('#waiting').hide();
-              $('.error').show();
-              $('.error').text(data.error);
-            } else {
-              location.reload();
-            }
-          });
-          return false;
-        });
-      });
-    </script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="/site.js"></script>
   </head>
   <body>
     <div class="navbar">
