--- a/views/links.tt
+++ b/views/links.tt
@@ -1,5 +1,3 @@
-[% use date %]
-
 [% if links.size > 0 %]
   <ul id="links">
     [% foreach link in links %]
@@ -9,7 +7,7 @@
         [% end %]
         <p class="link"><a href="/[% link.token %]">[% link.title %]</a></p>
         <p class="author">[% link.user %]</p>
-        <p class="date">[% date.format(link.created, '%Y-%m-%d %H:%M:%S') %]</p>
+        <p class="date-ts">[% link.created %]</p>
       </li>
     [% end %]
   </ul>
@@ -17,6 +15,7 @@
   <script type="text/javascript">
     var newest = [% links.first.created %];
     var oldest = [% links.last.created %];
+    localizeDates();
   </script>
 [% else %]
   <img src="/nope.gif" alt="nope">
